Fix vertical align issue in Carousel.

--- a/css/reception/carousel.less
+++ b/css/reception/carousel.less
@@ -15,13 +15,15 @@
             height: @height;
             cursor: default;
             div.carousel-item-image-wrapper {
+                display: inline-block;
                 position: relative;
                 border-radius: 0.5*@height;
                 width: @height;
                 height: @height;
-                overflow: hidden;
                 background-color: #c7c7c7;
+                vertical-align: top;
                 color: #182537;
+                overflow: hidden;
                 transition: background-color .6s ease, color .6s ease;
                 &:hover {
                     background-color: #182537;
